readme, fix sqlite to work with turso, add aws, auto logout on sse connection fail ...

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,44 @@
+
+# Slack Config
 SLACK_BOT_TOKEN=
 SLACK_APP_TOKEN=
 SLACK_BOT_VERIFICATION_TOKEN=
-DATABASE_URL=file:./local.db?keys=1
 
-CRYPT_PASSPHRASE=1234567890
+# Database URL
+DATABASE_URL=file:./local.db
 
+# Server Config
 SERVER_HOST=localhost
 SERVER_PORT=8081
-PUBLIC_URL=localhost:8081
+# Has to be a public URL
+PUBLIC_HOST=
+
+# Encryption Config
+# Generate a new passphrase with `openssl rand -base64 32`
+CRYPT_PASSPHRASE=
+
+# ID Hashing Config
+# Generate salt
+CRYPT_HASH_SALT=
+# Length of the hash
+CRYPT_HASH_LENGTH=12
+
+# File storage
+# Options: aws, local
+FILE_DRIVER=local
+
+# Max file size in MB
 FILE_MAX_SIZE=32
 
-CRYPT_HASH_SALT=1234567890
-CRYPT_HASH_LENGTH=12
+# Local file storage
+# Required if FILE_DRIVER=local
+FILE_BASE_DIR=./bucket
+
+# AWS S3 file storage
+# Required if FILE_DRIVER=aws
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_ENDPOINT_URL_S3=
+AWS_REGION=
+AWS_BUCKET_NAME=
+AWS_NAME_PREFIX=files
