mds; slack install

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,39 @@
 
 # Slack Config
+# Required
 SLACK_BOT_TOKEN=
 SLACK_APP_TOKEN=
-SLACK_BOT_VERIFICATION_TOKEN=
 
 # Database URL
+# Required
 DATABASE_URL=file:./local.db
 
 # Server Config
+# Required
 SERVER_HOST=localhost
 SERVER_PORT=8081
 # Has to be a public URL
 PUBLIC_HOST=
 
 # Encryption Config
+# Required
 # Generate a new passphrase with `openssl rand -base64 32`
 CRYPT_PASSPHRASE=
 
 # ID Hashing Config
+# Required
 # Generate salt
 CRYPT_HASH_SALT=
 # Length of the hash
 CRYPT_HASH_LENGTH=12
 
 # File storage
+# Required
 # Options: aws, local
 FILE_DRIVER=local
 
 # Max file size in MB
+# Required
 FILE_MAX_SIZE=32
 
 # Local file storage
