--- a/fly.toml
+++ b/fly.toml
@@ -11,11 +11,11 @@ primary_region = 'iad'
 [http_service]
   internal_port = 8081
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'off'
   auto_start_machines = true
   min_machines_running = 1
   processes = ['app']
 
 [[vm]]
   size = 'shared-cpu-1x'
-  memory_request = 256
+  memory = '256mb'
